# gk-tree-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  asv.conf.json  benchmark  benchmark_demo.py  conftest.py  debug_dummy_handling.py  debug_roundtrip_test.py  pyproject.toml  run_benchmarks.py
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  README.md  __init__.py  __main__.py  benchmark_gkplus_tree.py  benchmark_gkplus_tree_adversarial.py  benchmark_klist.py  benchmark_runner.py  benchmark_utils.py  config.py  isolated_benchmark_runner.py  run.sh  run_benchmarks.py  runner.py  utils.py  verify.py
benchmarks/adversarial_keys/: keys_sz10000_k16_d1.pkl  keys_sz10000_k16_d10.pkl  keys_sz10000_k16_d160.pkl  keys_sz10000_k16_d20.pkl  keys_sz10000_k16_d40.pkl  keys_sz10000_k16_d80.pkl  keys_sz10000_k32_d1.pkl  keys_sz10000_k32_d10.pkl  keys_sz10000_k32_d160.pkl  keys_sz10000_k32_d20.pkl  keys_sz10000_k32_d320.pkl  keys_sz10000_k32_d40.pkl  keys_sz10000_k32_d80.pkl  keys_sz10000_k4_d1.pkl  keys_sz10000_k4_d10.pkl  keys_sz10000_k4_d20.pkl  keys_sz10000_k4_d30.pkl  keys_sz10000_k4_d40.pkl  (+28 more)
scripts/: analyze_adversarial_keys_scenarios.py  analyze_single_insertion.py  benchmark_find_successive.py  find_adversarial_keys.py
stats/: benchmarks.py  stats_gk_plus_tree.py  stats_gplus_tree.py
tests/: logconfig.py  stats_gplus_tree.py  test_base.py  test_g_k_plus_utils.py  test_gk_plus_tree.py  test_gk_plus_unzip.py  test_gk_plus_zip.py  test_gp_mkl_tree.py  test_insert_result.py  test_klist copy.py  test_klist.py  test_rank_hash_consistency.py  test_runner.py  test_selection.py  test_stats_gpltree.py  test_utility_functions.py  utils.py
(+63 files in other folders)
