[tool.poetry]
name = "gk-trees"
version = "0.1.0"
description = "A history-independent tree data structure for O(log(n)) tree operations with high probability and fast sequential access"
authors = ["Jannik Hehemann <jannik@hehemann-melle.de>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "gplus_trees", from = "src" },
  { include = "tests" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.2.5"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
asv = "^0.6.4"
build = "^1.0.0"
wheel = "^0.44.0"
ruff = ">=0.8"
mypy = ">=1.13"
pre-commit = ">=4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff (linter + formatter) ──────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "stats", "scripts"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",   # line too long — handled by formatter
  "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["gplus_trees", "tests"]

# ── Mypy (type checker) ────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # start permissive, tighten later
check_untyped_defs = true
ignore_missing_imports = true
